# Cpp2021

calc/: CMakeLists.txt  Main.cpp  calc.cpp  calc.h  evaluator.cpp  evaluator.h  parser.cpp  parser.h  plugin_loader.h  scanner.cpp  scanner.h  token.h
calc/doxygen/: calc.CHM
calc/pow/: pow.cpp
calc/trigonometry/: trig.cpp
deque/deque/: MemoryHeapStrategy.h  deque.cpp  deque.h
deque/doxygen/html/: index.chm
engine/: def.h  engine.cpp  engine.h  variadicVector.h  wrapper.h
engine/doxygen/: engine.CHM
